syntax = "proto3";

option csharp_namespace = "Taxi.gRPC";

package passenger;

// The passenger service definition.
service Passenger {
  // Gets a passenger
  rpc GetPassenger (GetPassengerRequest) returns (GetPassengerReply);
}

// The request message containing a passenger's id.
message GetPassengerRequest {
  string id = 1;
}

// The response message containing the passenger.
message GetPassengerReply {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  string country = 6;
  string state = 7;
  double rating = 8;
  bool is_active = 9;
}
